add examples of embed js in url

--- a/definitive/js_in_browser/JSClock.html
+++ b/definitive/js_in_browser/JSClock.html
@@ -26,5 +26,9 @@
     <body>
     <h1>Digital Clock</h1>
     <span id="clock"></span>
+
+    <a href="javascript:new Date().toLocaleTimeString();">What time is it??</a>
+    <a href="javascript:alert(new Date().toLocaleTimeString());">What time is it??</a>
+    <a href="javascript:void window.open('about:blank');">Open Window</a>
     </body>
 </html>
